[package]
name = "incircle_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rstar = "0.10.0"
bevy_app = "^0.9"
bevy_ecs = "^0.9"
bevy_core = "^0.9"
rtree_rs = "0.1.4"
bitmask-enum = "2.1.0"
uuid = { version = "^1", features = ["v4"] }
derive_more = { version = "^0", default-features = false, features = ["deref", "deref_mut"] }
incircle_protocol = { path = "../incircle_protocol" }
serde = { version = "^1", features = ["derive"] }

base64 = "^0.21"
rand = "^0"
futures-util = "*"
axum = { version = "^0.6", features = ["ws"] }
axum-extra = { version = "^0.4", features = ["cookie"] }
tokio = { version = "^1", features = ["full"] }
tracing = "^0.1"
tracing-subscriber = "^0.3"
thiserror = "^1"

dashmap = "^5"
ring-channel = "0.11"
mio = { version = "^0", features = ["net"] }
httparse = "^1"
http = "^0.2"
crossbeam-channel = "^0.5"
